# rustylc3

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.sh
.github/workflows/: deploy.yml
benchmarks/: README.md  bubble_sort.asm  fibonacci.asm  memory_stress.asm  multiply.asm  nested_loops.asm  prime_sieve.asm  subroutine_calls.asm
lc3-analysis/: Cargo.toml
lc3-analysis/src/: lib.rs
lc3-assembler/: Cargo.toml
lc3-assembler/src/: lib.rs
lc3-cli/: Cargo.toml
lc3-cli/src/: main.rs
lc3-core/: Cargo.toml
lc3-core/src/: lib.rs
lc3-disasm/: Cargo.toml
lc3-disasm/src/: lib.rs
lc3-parser/: Cargo.toml
lc3-parser/src/: lib.rs
lc3-wasm/: Cargo.toml
lc3-wasm/src/: lib.rs
os/: lc3os.asm
web/: .cta.json  .gitignore  index.html  package.json  vite.config.ts
web/public/: manifest.json
web/src/: routeTree.gen.ts  styles.css
web/src/components/: AdvancedMenu.tsx  ConsolePanel.tsx  ControlPanel.tsx  FileBrowser.tsx  FileToolbar.tsx  LC3Editor.tsx  MemoryPanel.tsx  RegistersPanel.tsx
web/src/lib/: file-manager.ts  file-storage.ts  lc3-store.ts  learning-progress.ts  os-store.ts
web/src/lib/learning/: index.ts  lesson01.ts  lesson02.ts  lesson03.ts  lesson04.ts  lesson05.ts  lesson06.ts  lesson07.ts  lesson08.ts  lesson09.ts  lesson10.ts  lesson11.ts  lesson12.ts  lesson13.ts  lesson14.ts  lesson15.ts  lesson16.ts  lesson17.ts  lesson18.ts  types.ts
web/src/routes/: __root.tsx  index.tsx
web/src/routes/learn/: index.tsx
web/src/wasm/: lc3_wasm.d.ts  lc3_wasm.js  lc3_wasm_bg.wasm  lc3_wasm_bg.wasm.d.ts  package.json
