[package]
name = "lc3-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lc3-core = { path = "../lc3-core" }
lc3-assembler = { path = "../lc3-assembler" }
lc3-analysis = { path = "../lc3-analysis" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
